fix: overflow

--- a/src/components/Player/Player.css
+++ b/src/components/Player/Player.css
@@ -9,8 +9,10 @@
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 15px;
+  padding-top: 10px;
   font-size: 20px;
   line-height: 1.2;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1024px) {
